GITForce/src/objects/Survey__c.object
<CustomObject>
    <description>Hold a list of questions that holds this survey.</description>
    <fields>
        <fullName>Completed_URL__c</fullName>
        <label>Completed URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questions_Per_Page__c</fullName>
        <label>Questions Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed_URL__c</columns>
        <columns>Description__c</columns>
        <columns>Questions_Per_Page__c</columns>
        <columns>Site_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>